# smlr

./: .example.env  .gitignore  Cargo.toml  README.md  Rocket.example.toml
src/: auth.rs  main.rs  utils.rs
src/routes/: error.rs  home.rs  mod.rs  new.rs  redirect.rs
