[package]
name = "smlr"
version = "0.1.0"
authors = ["Pierre Bondoerffer <pierre@bondoer.fr>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rand = "0.7.2"

[profile.release]
lto = true
debug = false
panic = 'abort'
opt-level = 3
incremental = false
overflow-checks = false
debug-assertions = false